# calorie-tracker

./: .env.example  .gitattributes  Dockerfile  README.md  alembic.ini  docker-compose.yml  gradlew  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 1b9cc4fdfc9b_add_sodium_tracking.py  2aa290a24ec5_change_user_profile_height_cm_to_integer.py  2de1283dc40e_add_sugar_and_saturated_fat_tracking.py  741c627fb171_add_goal_type.py  7bbf9ff86668_add_weight_kg_to_user_profile.py  7dec710dc7d5_adjust_carbs_guideline.py  824c17bcbba4_seed_physiological_guidelines.py  a1c3f9e2b4d7_add_weight_goal_to_user_profile.py  a3c7e9f2d4b1_add_counts_as_sugar_override_to_items.py  b4e8f1a6c3d9_correct_double_counter_carbs_on_existing_usda_imported_items.py  b7e2f4a9c1d3_add_serving_size_id_to_recipe_ingredients.py  c4d8b1f6e2a7_add_last_logged_at_to_items.py  c7f2a9d4e6b3_add_source_url_to_recipes.py  d226c0736474_initial_schema.py  d5a8c2f7b9e1_drop_meal_plans_table.py  d9f1a3b8e5c2_add_last_logged_at_to_recipes.py  e2b6c9a4f7d1_add_last_logged_quantity_and_last_logged_serving_size_id_to_items.py  env.py  f3a8c1d9e0b2_enable_pg_trgm_and_add_trigram_indexes_for_fuzzy_search.py  f8a2d5c1b9e4_add_countable_sugar_g_logged_to_logs.py
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mealtracker/android/: MainActivity.kt
android/app/src/main/java/com/mealtracker/android/health/: HealthConnectManager.kt  HealthConnectPreferences.kt
android/app/src/main/java/com/mealtracker/android/network/: ApiClient.kt  ApiService.kt
android/app/src/main/java/com/mealtracker/android/network/models/: Models.kt
android/app/src/main/java/com/mealtracker/android/ui/components/: BarcodeScannerWithControls.kt  CalendarPickerDialog.kt  CatalogVisuals.kt  CreateServingDialog.kt  CropDialog.kt  DonutChart.kt  ImageOrientation.kt  ImagePickerWithCrop.kt  ItemQuantityDialog.kt  ItemResultsList.kt  LiveBarcodeScannerView.kt  LiveLabelCaptureView.kt  MacroProgressRing.kt  MealVisuals.kt  PageIndicator.kt  PercentSliderRow.kt  ProfileAvatar.kr  ProfileAvatar.kt  StatusBarColor.kt  StreakCalendarDialog.kt  WeekPickerDialog.kt  WeightLineChart.kt
android/app/src/main/java/com/mealtracker/android/ui/navigation/: AppNavHost.kt
android/app/src/main/java/com/mealtracker/android/ui/screens/: AddItemScreen.kt  AddItemViewModel.kt  CalorieGoalScreen.kt  CalorieGoalViewModel.kt  CreateRecipeScreen.kt  CreateRecipeViewModel.kt  EditProfileScreen.kt  EditProfileViewModel.kt  HealthConnectOnboardingStep.kt  HealthConnectSettingsScreen.kt  HomeScreen.kt  HomeViewModel.kt  JournalScreen.kt  JournalViewModel.kt  MacronutrientsScreen.kt  MacronutrientsViewModel.kt  MealCalorieGoalScreen.kt  MealCalorieGoalViewModel.kt  MealDetailScreen.kt  MealDetailViewModel.kt  OnboardingGateViewModel.kt  OnboardingScreen.kt  PlaceholderScreens.kt  ProfileOverviewViewModel.kt  ProfileScreen.kt  ProfileViewModel.kt  RecipesScreen.kt  RecipesViewModel.kt  SettingsScreen.kt  WeightGoalScreen.kt  WeightGoalViewModel.kt
android/app/src/main/java/com/mealtracker/android/ui/theme/: Color.kt  Theme.kt  ThemePreference.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
android/gradle/: libs.versions.toml
app/: auth.py  barcode.py  config.py  database.py  main.py  models.py  nutrition.py  ocr.py  ocr_metrics.py  schemas.py  search.py  usda.py
app/routers/: goals.py  guidelines.py  items.py  logs.py  meal_plans.py  recipes.py  usda.py  user_profile.py
