[tool.poetry]
name = "meal-tracker"
version = "0.1.0"
description = "Self-hosted meal tracker, recipe manager, and meal planner"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"

python-multipart = "^0.0.12"  # required for FastAPI file uploads (barcode scan endpoint)
pyzbar = "^0.1.9"           # server-side barcode decoding (primary)
zxing-cpp = "^2.2.0"        # server-side barcode decoding (fallback -- see app/barcode.py)
httpx = "^0.27.2"           # USDA FoodData Central API calls
easyocr = "^1.7.2"          # OCR for nutrition labels (replaced pytesseract -- better accuracy on real photos)
numpy = "^1.26.0"           # EasyOCR takes images as numpy arrays; also comes in transitively via easyocr/torch, but we import it directly in app/ocr.py so pinning it explicitly

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"